Update packages, main files and get local variables via prefix for properties